# bevy_game_jam_5

./: Cargo.toml
.github/workflows/: release.yaml
assets/xfcs/: ship.xcf
src/: camera.rs  debris.rs  debug.rs  explosion.rs  input.rs  level.rs  main.rs  planet.rs  player.rs  projectile.rs  satellite.rs  ui.rs
workflows/: release.yaml
