[package]
name = "bevy_game_jam_5"
version = "0.1.0"
edition = "2021"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14"
bevy_embedded_assets = "0.11.0"
bevy_rapier2d = "0.27.0"
leafwing-input-manager = "0.14.0"
rand = "0.8.5"
